Fixed slider drop shadow cut off and arrow display

--- a/css/style.css
+++ b/css/style.css
@@ -306,10 +306,12 @@ p {
   max-width: 312px;
   box-shadow: 2px 5px 11px rgba(0, 0, 0, .5);
   border-radius: 5px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .left-arrow, .right-arrow {
-  display: none;
+  display: none !important;
 }
 
 .slider-wrapper .thumbnail:after {
@@ -525,6 +527,7 @@ label {
   .l-media {
     width: calc(100% - 160px);
     margin: 0 80px;
+    overflow: hidden;
   }
 
   .left-arrow, .right-arrow {
